# apig-wsgi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  apig_wsgi.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  test_apig_wsgi.py  tox.ini
.github/ISSUE_TEMPLATE/: issue.yml
.github/actions/: main.yml
.github/workflows/: main.yml
example/: README.rst
example/app/: manage.py  requirements.in  requirements.txt
example/app/testapp/: settings.py  tests.py  urls.py  views.py  wsgi.py
example/deployment/: ansible.cfg  playbook.yml  requirements.in  requirements.txt
example/deployment/files/: cloudformation_base.yml  cloudformation_site.yml
requirements/: py310.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: apig_wsgi.py
src/apig_wsgi/: __init__.py  compat.py
tests/: test_apig_wsgi.py
tests/requirements/: py38.txt
