[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "apig-wsgi"
version = "2.18.0"
description = "Wrap a WSGI application in an AWS Lambda handler function for running on API Gateway or an ALB."
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = [
  "API Gateway",
  "APIG",
  "AWS",
  "Lambda",
]
license = {text = "MIT"}
authors = [{name = "Adam Johnson", email = "me@adamj.eu"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  'typing-extensions; python_version < "3.8"',
]
[project.urls]
Changelog = "https://github.com/adamchainz/apig-wsgi/blob/main/CHANGELOG.rst"
Funding = "https://adamj.eu/books/"
Repository = "https://github.com/adamchainz/apig-wsgi"

[tool.black]
target-version = ['py38']

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """

[tool.coverage.run]
branch = true
parallel = true
source = [
    "apig_wsgi",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    ".tox/**/site-packages",
]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src/"
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
report_level = "ERROR"
