[metadata]
name = apig-wsgi
version = 2.10.0
description = Wrap a WSGI application in an AWS Lambda handler function for running on API Gateway or an ALB.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/apig-wsgi
project_urls =
    Changelog = https://github.com/adamchainz/apig-wsgi/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT License
keywords = AWS, Lambda, API Gateway, APIG
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = apig_wsgi
include_package_data = True
install_requires =

python_requires = >=3.6
zip_safe = False

[coverage:run]
branch = True
source = apig_wsgi

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I
ignore = E203,E501,W503
