[metadata]
name = apig-wsgi
version = 2.14.0
description = Wrap a WSGI application in an AWS Lambda handler function for running on API Gateway or an ALB.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/apig-wsgi
project_urls =
    Changelog = https://github.com/adamchainz/apig-wsgi/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT License
keywords = AWS, Lambda, API Gateway, APIG
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =

python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    apig_wsgi
    tests

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
