[metadata]
name = apig_wsgi
version = 2.18.0
description = Wrap a WSGI application in an AWS Lambda handler function for running on API Gateway or an ALB.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/apig-wsgi
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = AWS, Lambda, API Gateway, APIG
project_urls =
    Changelog = https://github.com/adamchainz/apig-wsgi/blob/main/CHANGELOG.rst
    Funding = https://adamj.eu/books/
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    typing-extensions;python_version < "3.8"
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    apig_wsgi
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
